--- a/index.html
+++ b/index.html
@@ -1,23 +1,67 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partir et découvrir</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style/style.css">
 </head>
+
 <body>
     <header>
         <nav>
-            
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="destinations.html">Nos destinations</a></li>
+            <li><a href="àpropos.html">Nous connaitre</a></li>
+            <li><a href="contact.html">Nous contactez</a></li>
+
         </nav>
     </header>
 
     <main>
         <h1>Partir et découvrir</h1>
-        
+        <div>
+            <h2>Vous savez ce que vous voulez ?</h2>
+            <form action="">
+                <label for="">Où ?</label>
+                <input type="text" placeholder="Paris, Barcelone, ...">
+                <label for="">Quand ?</label>
+                <input type="date">
+                <label for="">Combien d'enfants</label>
+                <input type="number">
+                <label for="">Combien d'adultes</label>
+                <input type="number">
+            </form>
+        </div>
+        <div>
+            <h2>Nos destinations les plus populaires</h2>
+            <div>
+                <h4>Nom desti</h4>
+                <img src="Images/placeholder.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et sem ac est convallis mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut vestibulum erat eu nisi ornare, a mollis eros condimentum. Duis quis scelerisque mauris. Aliquam sed luctus justo, quis porttitor ex. Nullam interdum vel leo non sodales. Phasellus condimentum non nulla sit amet aliquam. Aliquam varius ipsum ut viverra dictum. Vivamus aliquet lectus metus, quis lobortis diam scelerisque efficitur.</p>
+            </div>
+            <div>
+                <h4>Nom desti</h4>
+                <img src="Images/placeholder.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et sem ac est convallis mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut vestibulum erat eu nisi ornare, a mollis eros condimentum. Duis quis scelerisque mauris. Aliquam sed luctus justo, quis porttitor ex. Nullam interdum vel leo non sodales. Phasellus condimentum non nulla sit amet aliquam. Aliquam varius ipsum ut viverra dictum. Vivamus aliquet lectus metus, quis lobortis diam scelerisque efficitur.</p>
+            </div>
+            <div>
+                <h4>Nom desti</h4>
+                <img src="Images/placeholder.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et sem ac est convallis mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut vestibulum erat eu nisi ornare, a mollis eros condimentum. Duis quis scelerisque mauris. Aliquam sed luctus justo, quis porttitor ex. Nullam interdum vel leo non sodales. Phasellus condimentum non nulla sit amet aliquam. Aliquam varius ipsum ut viverra dictum. Vivamus aliquet lectus metus, quis lobortis diam scelerisque efficitur.</p>
+            </div>
+            <a href="destinations.html">Voir toutes nos destinations</a>
+        </div>
+
     </main>
-    <footer></footer>
-    <script src="script.js"></script>
+
+    <footer>
+        <p>Booking.com fait partie de Booking Holdings Inc., le leader mondial des voyages en ligne et services associés.
+            Copyright © 1996–2025 Booking.com™. Tous droits réservés.</p>
+
+    </footer>
+    <script src="Script/script.js"></script>
 </body>
+
 </html>
