Ajout section offre

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             </div>
             <a href="destinations.html">Voir toutes nos destinations</a>
         </div>
+        <div>
+            <H3>Offres</H3>
+        </div>
 
     </main>
 
