--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <p>Partir et Découvrir est une marque déposée du groupe Neslé©, le leader mondial de la vente d'eau et d'autres
+        <p>Partir et Découvrir est une marque déposée du groupe Neslté, le leader mondial de la vente d'eau et d'autres
             produits associés. <br>
             Copyright © 1996–2025 Partir et découvrir™. Tous droits réservés.</p>
 
