Ajout système de reservation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 class="merriweather-black">Partir et découvrir</h1>
         <section class="formulaire">
             <h2 class="merriweather-bold">Vous savez ce que vous voulez ?</h2>
-            <form action="">
+            <form >
                 <label for="lieu" class="merriweather-regular">Lieu</label>
                 <input type="text" id="lieu" placeholder="Paris, Barcelone, ...">
                 <label for="depart" class="merriweather-regular">Départ</label>
@@ -42,7 +42,7 @@
                 <label for="adultes" class="merriweather-regular">Combien d'adultes</label>
                 <input type="number" id="adultes" class="inputnumber">
                 <br>
-                <button class="merriweather-light">Valider</button>
+                <button type="button" class="merriweather-light" id="btn">Valider</button>
             </form>
             <p id="reponse"></p>
         </section>
@@ -96,8 +96,9 @@
             Copyright © 1996–2025 Partir et découvrir™. Tous droits réservés.</p>
 
     </footer>
-    <script src="Script/script_carrousel.js"></script>
-    <script src="Script/script_burger.js"></script>
+    <script src="Script/carrousel.js"></script>
+    <script src="Script/burger.js"></script>
+    <script src="Script/reserve.js"></script>
 </body>
 
 </html>
