Page à propos faite

--- a/index.html
+++ b/index.html
@@ -30,17 +30,27 @@
         <h1 class="merriweather-black">Partir et découvrir</h1>
         <section class="formulaire">
             <h2 class="merriweather-bold">Vous savez ce que vous voulez ?</h2>
-            <form >
-                <label for="lieu" class="merriweather-regular">Lieu</label>
-                <input type="text" id="lieu" placeholder="Paris, Barcelone, ...">
-                <label for="depart" class="merriweather-regular">Départ</label>
-                <input type="date" id="depart">
-                <label for="retour" class="merriweather-regular">Retour</label>
-                <input type="date" id="retour">
-                <label for="enfants" class="merriweather-regular">Combien d'enfants</label>
-                <input type="number" id="enfants" class="inputnumber">
-                <label for="adultes" class="merriweather-regular">Combien d'adultes</label>
-                <input type="number" id="adultes" class="inputnumber">
+            <form>
+                <div>
+                    <label for="lieu" class="merriweather-regular">Lieu</label>
+                    <input type="text" id="lieu" placeholder="Paris, Barcelone, ...">
+                </div>
+                <div>
+                    <label for="depart" class="merriweather-regular">Départ</label>
+                    <input type="date" id="depart">
+                </div>
+                <div>
+                    <label for="retour" class="merriweather-regular">Retour</label>
+                    <input type="date" id="retour">
+                </div>
+                <div>
+                    <label for="enfants" class="merriweather-regular">Combien d'enfants</label>
+                    <input type="number" id="enfants" class="inputnumber">
+                </div>
+                <div>
+                    <label for="adultes" class="merriweather-regular">Combien d'adultes</label>
+                    <input type="number" id="adultes" class="inputnumber">
+                </div>
                 <br>
                 <button type="button" class="merriweather-light" id="btn">Valider</button>
             </form>
