--- a/àpropos.html
+++ b/àpropos.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À propos</title>
+    <link rel="stylesheet" href="Style/apropos.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -17,8 +20,34 @@
     <main>
         <h1>Partir et découvrir</h1>
         <h2>Notre histoire</h2>
-        <p>Notre entreprise à été fondée en 1965 par Patrick Daikuvir </p>
+        <p>Partir et Découvrir est une entreprise de voyage fondée par Patrick Daikuvir, passionné par le monde et
+            la découverte de nouvelles cultures. Son objectif était de rendre le voyage accessible à tous, en proposant
+            des séjours uniques, personnalisés et hors des sentiers battus. Grâce à son expertise et à sa vision
+            innovante, l’entreprise a rapidement gagné en popularité.
+
+            Cependant, en raison de sa croissance rapide et de l'intérêt croissant pour l'industrie du voyage, Partir
+            et Découvrir a attiré l'attention de grands groupes. En 2023, elle a été rachetée par Nestlé, une
+            multinationale reconnue, dans l'espoir de diversifier ses activités. Ce rachat a permis à l'entreprise de
+            renforcer ses capacités et d'élargir son offre tout en conservant l'esprit d'aventure et de découverte qui a
+            fait son succès. Le nom Partir et Découvrir demeure aujourd'hui synonyme de voyages exceptionnels,
+            alliant authenticité et expertise.</p>
+        <div class="photos">
+            <figure>
+                <img src="Images/locaux.jpg" alt="">
+                <figcaption>Nos locaux</figcaption>
+            </figure>
+            <figure>
+                <img src="Images/employes.jpg" alt="">
+                <figcaption>Nos employés</figcaption>
+            </figure>
+        </div>
     </main>
-    
+    <footer>
+        <p>Partir et Découvrir est une marque déposée du groupe Neslté, le leader mondial de la vente d'eau et d'autres
+            produits associés. <br>
+            Copyright © 1996–2025 Partir et découvrir™. Tous droits réservés.</p>
+
+    </footer>
 </body>
+
 </html>
