Clean + start destinations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partir et découvrir</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="Style/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -54,7 +54,7 @@
                 <br>
                 <button type="button" class="merriweather-light" id="btn">Valider</button>
             </form>
-            <p id="reponse"></p>
+            <p id="reponse" class="merriweather-regular"></p>
         </section>
 
         <section class="Images">
@@ -89,20 +89,19 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-            <a href="destinations.html">Voir toutes nos destinations</a>
+            <a class="merriweather-light-italic" href="destinations.html">Voir toutes nos destinations</a>
         </section>
 
         <section class="offre">
-            <H3>OFFRE EXCEPTIONEL</H3>
-            <p>Vous pouvez obtenir une incroyable réduction de 75% sur tous les voyages à Jouy-en-Josas</p>
+            <H3 class="merriweather-bold">OFFRE EXCEPTIONEL</H3>
+            <p class="merriweather-regular">Vous pouvez obtenir une incroyable réduction de 75% sur tous les voyages à Jouy-en-Josas</p>
             <img src="Images/Jouy-en-Josas.jpg" alt="">
         </section>
 
     </main>
 
-    <footer>
-        <p>Partir et Découvrir est une marque déposée du groupe Neslté, le leader mondial de la vente d'eau et d'autres
-            produits associés. <br>
+    <footer class=".merriweather-bold-italic">
+        <p>Partir et Découvrir est une marque déposée du groupe Neslté.<br>
             Copyright © 1996–2025 Partir et découvrir™. Tous droits réservés.</p>
 
     </footer>
