--- a/destinations.html
+++ b/destinations.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Partir et découvrir</title>
+    <link rel="stylesheet" href="Style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
     <header>
-        <nav>
+        <nav class="merriweather-regular" id="nav">
+            <div class="burger" id="burger"></div>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="destinations.html">Nos destinations</a></li>
             <li><a href="àpropos.html">Nous connaitre</a></li>
@@ -15,5 +25,3 @@
 
         </nav>
     </header>
-</body>
-</html>
