--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
 
                 <div class="mySlides fade">
 
-                    <img src="../Partir et découvrir/Images/paris.jpg" style="width:100%">
+                    <img src="Images/paris.jpg" style="width:100%">
                     <div class="text merriweather-light-italic">Paris, Le Louvre</div>
                 </div>
 
                 <div class="mySlides fade">
 
-                    <img src="../Partir et découvrir/Images/cuzco.jpg" style="width:100%">
+                    <img src="Images/cuzco.jpg" style="width:100%">
                     <div class="text merriweather-light-italic">Cuzco, Machu Picchu</div>
                 </div>
 
                 <div class="mySlides fade">
 
-                    <img src="../Partir et découvrir/Images/singapour.jpg" style="width:100%">
+                    <img src="Images/singapour.jpg" style="width:100%">
                     <div class="text merriweather-light-italic">Singapour, Marina bay</div>
                 </div>
 
