--- a/destinations.html
+++ b/destinations.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Partir et découvrir</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <title>Destinations</title>
+    <link rel="stylesheet" href="Style/destinations.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,6 +22,98 @@
             <li><a href="destinations.html">Nos destinations</a></li>
             <li><a href="àpropos.html">Nous connaitre</a></li>
             <li><a href="contact.html">Nous contactez</a></li>
-
         </nav>
     </header>
+
+    <main>
+        <h1 class="merriweather-black">Partir et découvrir</h1>
+        <h2 class="merriweather-bold">Nos destinations</h2>
+        <section>
+            <h3 class="merriweather-bold">Paris</h3>
+            <div>
+                <img src="Images/paris.jpg" alt="">
+                <p class="merriweather-regular">Destination touristique visitée chaque année par quelque dix millions de
+                    touristes étrangers, Paris
+                    possède un patrimoine architectural mondialement célèbre comme la cathédrale Notre-Dame de Paris, la
+                    tour Eiffel, le musée du Louvre ou encore l'Arc de Triomphe. De nombreux styles architecturaux sont
+                    représentés, du classicisme à l'architecture contemporaine en passant par l'Art nouveau.</p>
+            </div>
+        </section>
+        <section>
+            <h3 class="merriweather-bold">Singapour</h3>
+            <div>
+                <img src="Images/singapour.jpg" alt="">
+                <p class="merriweather-regular">Singapour est une juxtaposition de différentes cultures provenant de
+                    différentes ethnies : Chinois,
+                    Malais et Indiens. Chaque groupe est encouragé à maintenir ses traditions, tout en embrassant un
+                    mode
+                    de vie conformiste et moderne. Singapour est donc un lieu unique de paradoxes. Sur le plan des
+                    célébrations on peut voir un mariage chinois prendre place juste à côté d'un mariage malais. Il est
+                    également possible de participer à un ensemble de fêtes illustrant la variété d'origines des
+                    Singapouriens.</p>
+            </div>
+        </section>
+        <section>
+            <h3 class="merriweather-bold">Cuzco</h3>
+            <div>
+                <img src="Images/cuzco.jpg" alt="">
+                <p class="merriweather-regular">Malgré de récentes études archéologiques de la ville et des styles
+                    architecturaux qui la compose,
+                    suggérant ainsi une origine bien plus ancienne que celle des Incas, et donc une histoire plus
+                    profonde
+                    liée a d'autres civilisations ou cultures ayant fondé le lieu avant l'arrivée des Incas, la légende
+                    veut
+                    que la ville ait été fondée au XIe siècle ou au XIIe siècle par Manco Capac et Mama Ocllo après leur
+                    «
+                    naissance » dans le lac Titicaca. </p>
+            </div>
+        </section>
+        <section>
+            <h3 class="merriweather-bold">Jouy-en-Josas</h3>
+            <div>
+                <img src="Images/Jouy-en-Josas.jpg" alt="">
+                <p class="merriweather-regular">Jouy-en-Josas est une commune française située dans le département des
+                    Yvelines, en région Île-de-France.<br>Ses habitants sont appelés les « Jovaciens » et les «
+                    Jovaciennes
+                    ».</p>
+            </div>
+        </section>
+        <section>
+            <h3 class="merriweather-bold">Djenné</h3>
+            <div>
+                <img src="Images/djenne.jpg" alt="">
+                <p class="merriweather-regular">Djenné est une ville et une commune malienne, chef-lieu cercle de
+                    Djenné,
+                    situé dans la région de Mopti, 574 km par la route de la capitale Bamako située à l'ouest. Djenné
+                    est à
+                    la charnière entre le monde nomade et le monde sédentaire. Elle est située à 130 km de Moptis, et à
+                    500
+                    km par voie fluviale de la ville caravanière de Tombouctou à laquelle elle est liée
+                    commercialement.Son
+                    nom signifie « génie des eaux » en Bambara.
+            </div>
+        </section>
+
+        <section>
+            <h3 class="merriweather-bold">Londres</h3>
+            <div>
+                <img src="Images/londres.jpg" alt="">
+                <p class="merriweather-regular">Londres est considérée comme l'une des villes mondiales parmi les plus
+                    importantes. La ville exerce un impact considérable sur les arts, le commerce,
+                    l'éducation, le divertissement, la mode, les finances, les soins de santé, les médias, les services
+                    professionnels, la recherche et le développement, le tourisme et les transports. Londres se
+                    classe 26e sur 300 grandes villes pour ses performances économiques</p>
+            </div>
+        </section>
+    </main>
+    <footer class=".merriweather-bold-italic">
+        <p>Partir et Découvrir est une marque déposée du groupe Neslté.<br>
+            Copyright © 1996–2025 Partir et découvrir™. Tous droits réservés.</p>
+
+    </footer>
+
+    <script src="Script/burger.js"></script>
+
+</body>
+
+</html>
