--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
@@ -21,8 +20,6 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="destinations.html">Nos destinations</a></li>
             <li><a href="àpropos.html">Nous connaitre</a></li>
-            <li><a href="contact.html">Nous contactez</a></li>
-
         </nav>
     </header>
 
@@ -74,8 +71,6 @@
                 </div>
 
                 <div class="mySlides fade">
-
-                    
                     <img src="Images/singapour.jpg" style="width:100%">
                     <div class="text merriweather-light-italic">Singapour, Marina bay</div>
                 </div>
@@ -95,7 +90,8 @@
 
         <section class="offre">
             <H3 class="merriweather-bold">OFFRE EXCEPTIONEL</H3>
-            <p class="merriweather-regular">Vous pouvez obtenir une incroyable réduction de 75% sur tous les voyages à Jouy-en-Josas</p>
+            <p class="merriweather-regular">Vous pouvez obtenir une incroyable réduction de 75% sur tous les voyages à
+                Jouy-en-Josas</p>
             <img src="Images/Jouy-en-Josas.jpg" alt="">
         </section>
 
@@ -104,7 +100,6 @@
     <footer class=".merriweather-bold-italic">
         <p>Partir et Découvrir est une marque déposée du groupe Neslté.<br>
             Copyright © 1996–2025 Partir et découvrir™. Tous droits réservés.</p>
-
     </footer>
     <script src="Script/carrousel.js"></script>
     <script src="Script/burger.js"></script>
