--- a/àpropos.html
+++ b/àpropos.html
@@ -46,6 +46,16 @@
                 <figcaption class="merriweather-light-italic">Nos employés</figcaption>
             </figure>
         </div>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Vous avez une question ? Contactez-nous.</p>
+            <form action="">
+                <input type="text" placeholder="Sujet">
+                <input type="email" placeholder="Email">
+                <textarea  placeholder="Demande"></textarea>
+                <button>Envoyer</button>
+            </form>
+        </section>
     </main>
     <footer>
         <p class="merriweather-light-italic">Partir et Découvrir est une marque déposée du groupe Neslté. <br>
